# vip-analyzer

./: .gitattributes  .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  input.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir-def/: Cargo.toml
crates/hir-def/src/: db.rs  dyn_map.rs  expr_store.rs  hir.rs  item_scope.rs  item_tree.rs  lib.rs  nameres.rs  resolver.rs  signatures.rs  src.rs  test_db.rs
crates/hir-def/src/expr_store/: body.rs  lower.rs
crates/hir-def/src/hir/: namespaces.rs  type_ref.rs
crates/hir-def/src/item_tree/: lower.rs
crates/hir-def/src/nameres/: collector.rs
crates/hir-def/src/nameres/tests/: incremental.rs
crates/hir-def/src/resolver/: member_declaration.rs  member_definition.rs  type_name_resolution.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: db.rs  infer.rs  lib.rs  lower.rs
crates/hir-ty/src/infer/: diagnostics.rs
crates/hir-ty/src/lower/: diagnostics.rs
crates/hir/src/: db.rs  from_id.rs  has_source.rs  lib.rs  semantics.rs  source_analyzer.rs
crates/hir/src/semantics/: child_by_source.rs  source_to_def.rs
crates/ide/: Cargo.toml
crates/ide-db/: Cargo.toml
crates/ide-db/src/: apply_change.rs  classify.rs  documentation.rs  helpers.rs  lib.rs  prime_caches.rs  search.rs  source_change.rs  symbol_index.rs  text_edit.rs
crates/ide-db/src/syntax_helpers/: tree_diff.rs
crates/ide-diagnostics/: Cargo.toml
crates/ide-diagnostics/src/: lib.rs
crates/ide/src/: fixture.rs  goto_declaration.rs  goto_definition.rs  lib.rs  navigation_target.rs  references.rs  view_syntax_tree.rs
crates/intern/: Cargo.toml
crates/intern/src/: symbol.rs
crates/intern/src/symbol/: symbols.rs
crates/lexer/: Cargo.toml
crates/lexer/benches/: lexing.rs
crates/lexer/src/: cursor.rs  lib.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parsing.rs
crates/parser/src/: event.rs  grammar.rs  input.rs  lexed_str.rs  lib.rs  output.rs  parser.rs  shortcuts.rs  syntax_kind.rs  tests.rs  token_set.rs
crates/parser/src/grammar/: attributes.rs  items.rs  names.rs  namespaces.rs  params.rs  terms.rs  types.rs
crates/parser/src/grammar/items/: directives.rs  scope_items.rs  sections.rs
crates/parser/src/grammar/terms/: expressions.rs  statements.rs
crates/parser/src/syntax_kind/: generated.rs
crates/parser/src/tests/: test_fixtures.rs
crates/parser/test_data/lexer/err/: 0001_block_comment.pro  0001_block_comment.rast
crates/parser/test_data/lexer/ok/: 0001_block_comment.rast  0002_dots.rast
crates/parser/test_data/parser/err/: 0000_char.rast  0001_missing_domain_def.pro  0001_missing_domain_def.rast  0003_domain_def_bitsize.pro  0003_domain_def_bitsize.rast  0004_domain_def_digits.pro  0004_domain_def_digits.rast  0005_domain_def_range_empty.pro  0005_domain_def_range_empty.rast  0006_access_value_like_with_generics.pro  0006_access_value_like_with_generics.rast  0007_clause_missing_dot.pro  0007_clause_missing_dot.rast  0008_clause_missing_dot.pro  0008_clause_missing_dot.rast  0009_clause_missing_dot.pro  0009_clause_missing_dot.rast  0010_clause_relationals.pro  0010_clause_relationals.rast  0011_shebang.rast  0012_wrong_section.pro  0012_wrong_section.rast  0013_fact_colon.pro  0013_fact_colon.rast  0014_invalid_class.pro  0014_invalid_class.rast  0015_invalid_class_construction_type.pro  0015_invalid_class_construction_type.rast  0016_invalid_class_construction_type.pro  0016_invalid_class_construction_type.rast  0017_match_missing_parens_args.pro  0017_match_missing_parens_args.rast  0018_match_missing_parens.pro  0018_match_missing_parens.rast  0019_match_missing_cases.pro  0019_match_missing_cases.rast  0020_match_missing_close_paren.pro  0020_match_missing_close_paren.rast  0021_match_missing_open_paren.pro  0021_match_missing_open_paren.rast  (+46 more)
crates/parser/test_data/parser/ok/: 0001_domains_limit.pro  0001_domains_limit.rast  0002_domains_named.pro  0002_domains_named.rast  0003_domains_named_qualified.pro  0003_domains_named_qualified.rast  0004_domains_compound.pro  0005_domains_fn.pro  (+63 more)
crates/paths/: Cargo.toml
crates/project-model/: Cargo.toml
crates/project-model/src/: lib.rs  manifest_path.rs  pro_dir.rs  project.rs  workspace.rs
crates/project-model/src/project/: project_files.rs
crates/project-model/test_data/: project_meta_data_1.txt  project_meta_data_2.txt
crates/query-group-macro/: Cargo.toml
crates/span/: Cargo.toml
crates/span/src/: ast_id.rs  lib.rs
crates/syntax/: Cargo.toml  vip.ungram
crates/syntax/fuzz/: Cargo.toml
crates/syntax/src/: ast.rs  fuzz.rs  lib.rs  parsing.rs  ptr.rs  syntax_editor.rs  syntax_node.rs  tests.rs  token_text.rs  validation.rs
crates/syntax/src/ast/: generated.rs  make.rs  node_ext.rs  operators.rs  syntax_factory.rs  token_ext.rs  traits.rs
crates/syntax/src/syntax_editor/: edit_algo.rs  edits.rs
crates/test-fixture/: Cargo.toml
crates/test-fixture/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixture.rs  lib.rs
crates/toolchain/: Cargo.toml
crates/toolchain/src/: diagnostic_codes.rs  lib.rs
crates/vfs/: Cargo.toml
crates/vfs-notify/: Cargo.toml
crates/vfs-notify/src/: lib.rs
crates/vfs/src/: lib.rs  loader.rs  vfs_path.rs
crates/vip-analyzer/: Cargo.toml
crates/vip-analyzer/src/: cli.rs  command.rs  config.rs  diagnostics.rs  flycheck.rs  global_state.rs  lib.rs  lsp.rs  main_loop.rs  op_queue.rs  reload.rs  task_pool.rs  tests.rs  version.rs
crates/vip-analyzer/src/cli/: flags.rs
crates/vip-analyzer/src/diagnostics/: to_proto.rs
crates/vip-analyzer/src/handlers/: dispatch.rs  notification.rs  request.rs
crates/vip-analyzer/src/lsp/: capabilities.rs  ext.rs  from_proto.rs  to_proto.rs  utils.rs
crates/vip-analyzer/src/tests/: classify_nodes.rs
crates/vip-analyzer/src/tracing/: config.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  dist.rs  flags.rs  install.rs  main.rs  util.rs  verify.rs
xtask/src/codegen/: grammar.rs  parser_inline_tests.rs
xtask/src/codegen/grammar/: ast_src.rs
(+199 files in other folders)
