[workspace]
members = ["xtask/", "crates/*"]
default-members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niller-g/vip-analyzer"
publish = false

[workspace.dependencies]
# Local crates
query-group = { package = "query-group-macro", path = "./crates/query-group-macro" }
span = { path = "./crates/span" }
toolchain = { path = "./crates/toolchain" }
stdx = { path = "./crates/stdx" }
syntax = { path = "./crates/syntax" }
vfs-notify = { path = "./crates/vfs-notify" }
vfs = { path = "./crates/vfs" }
paths = { path = "./crates/paths" }
parser = { path = "./crates/parser" }
base-db = { path = "./crates/base-db" }
ide-db = { path = "./crates/ide-db" }
ide = { path = "./crates/ide" }
project-model = { path = "./crates/project-model" }
ide-diagnostics = { path = "./crates/ide-diagnostics" }
lexer = { path = "./crates/lexer" }
hir = { path = "./crates/hir" }
hir-ty = { path = "./crates/hir-ty" }
hir-def = { path = "./crates/hir-def" }
intern = { path = "./crates/intern" }
test-utils = { path = "./crates/test-utils" }
test-fixture = { path = "./crates/test-fixture" }

# In-tree (rustc) crates that are published separately and follow semver
line-index = { version = "0.1.2" }
la-arena = { version = "0.3.1" }
lsp-server = { version = "0.7.8" }

# non-local crates
walkdir = "2.5.0"
crossbeam-channel = "0.5.15"
dissimilar = "1.0.10"
indexmap = { version = "2.8.0", features = ["serde"] }
expect-test = "1.5.1"
criterion = "0.5.1"
itertools = "0.14.0"
either = "1.15.0"
triomphe = { version = "0.1.14", default-features = false, features = ["std"] }
smol_str = "0.3.2"
text-size = "1.1.1"
rustc-hash = "2.1.1"
semver = "1.0.26"
nohash-hasher = "0.2.0"
tracing = "0.1.41"
tracing-tree = "0.4.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
] }
camino = "1.1.9"
anyhow = "1.0.97"
serde = { version = "1.0.219" }
serde_derive = { version = "1.0.219" }
serde_json = "1.0.140"
bitflags = "2.9.0"
rayon = "1.10.0"
rowan = "=0.15.15"
salsa = { version = "0.21.1", default-features = false, features = [
    "rayon",
    "salsa_unstable",
] }
salsa-macros = "0.21.1"
smallvec = { version = "1.14.0", features = [
    "const_new",
    "union",
    "const_generics",
] }
xflags = "0.3.2"
xshell = "0.2.7"
process-wrap = { version = "8.2.0", features = ["std"] }
arrayvec = "0.7.6"
libc = "0.2.171"
path-slash = "0.2.1"

# We need to freeze the version of the crate, as the raw-api feature is considered unstable
dashmap = { version = "=6.1.0", features = ["raw-api", "inline"] }
hashbrown = { version = "0.14.0", features = [
    "inline-more",
], default-features = false }

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]


## allow following lints
# () makes a fine error in most cases
result_unit_err = "allow"
# We don't expose public APIs that matter like this
len_without_is_empty = "allow"
# We have macros that rely on this currently
enum_variant_names = "allow"
# Builder pattern disagrees
new_ret_no_self = "allow"

## Following lints should be tackled at some point
too_many_arguments = "allow"
wrong_self_convention = "allow"

## warn at following lints
# CI raises these to deny
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

rc_buffer = "warn"
str_to_string = "warn"
