[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
xshell.workspace = true
xflags.workspace = true
itertools.workspace = true
either.workspace = true
proc-macro2 = "1.0.94"
quote = "1.0.40"
ungrammar = "1.16.1"
flate2 = "1.1.0"
time = { version = "0.3", default-features = false }
zip = { version = "2.4", default-features = false, features = [
    "deflate-flate2",
    "flate2",
    "time",
] }
stdx.workspace = true

[dev-dependencies]
test-utils.workspace = true
parser = { workspace = true, features = ["rast-parser"] }

[lints]
workspace = true
