[package]
name = "hir-def"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]

[dependencies]
base-db.workspace = true
stdx.workspace = true
syntax.workspace = true
span.workspace = true
intern.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
query-group.workspace = true

tracing.workspace = true
rustc-hash.workspace = true
la-arena.workspace = true
triomphe.workspace = true
smallvec.workspace = true
bitflags.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-fixture.workspace = true

[lints]
workspace = true
