[package]
name = "ide-diagnostics"
description = "Diagnostics rendering and fixits for vip-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]

[dependencies]
ide-db.workspace = true
syntax.workspace = true
stdx.workspace = true
toolchain.workspace = true
hir.workspace = true

tracing.workspace = true

[lints]
workspace = true
