[package]
name = "parser"
description = "The Rust parser for rust-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]

[features]
rast-parser = []

[dependencies]
lexer.workspace = true
tracing.workspace = true
drop_bomb = "0.1.5"

[dev-dependencies]
stdx.workspace = true
syntax.workspace = true
test-utils.workspace = true

expect-test.workspace = true
criterion.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[[bench]]
name = "parsing"
harness = false
