[package]
name = "paths"
description = "Path wrappers for absolute and relative paths vip-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]

[dependencies]
camino.workspace = true

[features]
serde1 = ["camino/serde1"]

[lints]
workspace = true
