[package]
name = "query-group-macro"
description = "A macro mimicking the `#[salsa::query_group]` macro for migrating to new Salsa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
expect-test.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
