[package]
name = "span"
description = "File and span related types for vip-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
la-arena.workspace = true
rustc-hash.workspace = true
hashbrown.workspace = true
text-size.workspace = true

# local deps
vfs.workspace = true
syntax.workspace = true
stdx.workspace = true


[lints]
workspace = true
