[package]
name = "vfs-notify"
description = "Implementation of `loader::Handle` for vip-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]

[dependencies]
paths.workspace = true
vfs.workspace = true
stdx.workspace = true

tracing.workspace = true
walkdir.workspace = true
crossbeam-channel.workspace = true
rustc-hash.workspace = true
notify = "8.0.0"
rayon = "1.10.0"

[lints]
workspace = true
